160309_2drjava때문에새로띄운bash.txt
P400@G416-13 MINGW32 /
$ cd ~

P400@G416-13 MINGW32 ~ (master)
$ cd ked/code

P400@G416-13 MINGW32 ~/ked/code (master)
$ cd j16/myrepo

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls src/
HelloWorld.java

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ javac
Usage: javac <options> <source files>
where possible options include:
  -g                         Generate all debugging info
  -g:none                    Generate no debugging info
  -g:{lines,vars,source}     Generate only some debugging info
  -nowarn                    Generate no warnings
  -verbose                   Output messages about what the compiler is doing
  -deprecation               Output source locations where deprecated APIs are used
  -classpath <path>          Specify where to find user class files and annotation processors
  -cp <path>                 Specify where to find user class files and annotation processors
  -sourcepath <path>         Specify where to find input source files
  -bootclasspath <path>      Override location of bootstrap class files
  -extdirs <dirs>            Override location of installed extensions
  -endorseddirs <dirs>       Override location of endorsed standards path
  -proc:{none,only}          Control whether annotation processing and/or compilation is done.
  -processor <class1>[,<class2>,<class3>...] Names of the annotation processors to run; bypasses default discovery process
  -processorpath <path>      Specify where to find annotation processors
  -d <directory>             Specify where to place generated class files
  -s <directory>             Specify where to place generated source files
  -implicit:{none,class}     Specify whether or not to generate class files for implicitly referenced files
  -encoding <encoding>       Specify character encoding used by source files
  -source <release>          Provide source compatibility with specified release
  -target <release>          Generate class files for specific VM version
  -version                   Version information
  -help                      Print a synopsis of standard options
  -Akey[=value]              Options to pass to annotation processors
  -X                         Print a synopsis of nonstandard options
  -J<flag>                   Pass <flag> directly to the runtime system
  -Werror                    Terminate compilation if warnings occur
  @<filename>                Read options and filenames from file


P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls src/
HelloWorld.java

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ javac -d classes/ -sourcepath src/ src/HelloWorld.java

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls classes/
HelloWorld.class

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ java classes/HelloWorld.class
▒▒▒▒: ▒? ?▒▒▒▒ classes.HelloWorld.class▒▒(▒▒) a▒?▒ ▒ε▒▒▒ ▒▒ ▒▒▒▒▒?▒. -->이게 바로 오류

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ java HelloWorld.class
▒▒▒▒: ▒? ?▒▒▒▒ HelloWorld.class▒▒(▒▒) a▒?▒ ▒ε▒▒▒ ▒▒ ▒▒▒▒▒?▒.

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ java -cp ./classes/ HelloWorld
Hello World

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls src/
com/  HelloWorld.java

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls src/com/sd/HelloWorld.java
src/com/sd/HelloWorld.java

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ pwd
/c/Users/P400/ked/code/j16/myrepo

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls -l
total 1
drwxr-xr-x 1 P400 197121 0 3월   9 17:26 classes/
drwxr-xr-x 1 P400 197121 0 3월   9 16:29 doc/
drwxr-xr-x 1 P400 197121 0 3월   9 17:01 lib/
drwxr-xr-x 1 P400 197121 0 3월   9 16:29 model/
-rw-r--r-- 1 P400 197121 8 3월   9 16:20 README.md
drwxr-xr-x 1 P400 197121 0 3월   9 17:29 src/

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ javac -d ./classes/ -sourcepath src/ src/com/sd/HelloWorld.java

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls classes/
com/  HelloWorld.class

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls classes/com/sd/
HelloWorld.class

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ java -cp classes/ com.sd.HelloWorld
Hello World

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ java -cp classes/ com.sd.HelloWorld
Hello World

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls -l
total 1
drwxr-xr-x 1 P400 197121 0 3월   9 17:32 classes/
drwxr-xr-x 1 P400 197121 0 3월   9 16:29 doc/
drwxr-xr-x 1 P400 197121 0 3월   9 17:01 lib/
drwxr-xr-x 1 P400 197121 0 3월   9 16:29 model/
-rw-r--r-- 1 P400 197121 8 3월   9 16:20 README.md
drwxr-xr-x 1 P400 197121 0 3월   9 17:29 src/

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ mv ~/Downloads/aplujar5
mv: missing destination file operand after ‘/c/Users/P400/Downloads/aplujar5’
Try 'mv --help' for more information.

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ mv ~/Downloads/aplu5.jar ./lib/

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ ls lib/
aplu5.jar  drjava-stable-20140826-r5761.jar

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ javac -d classes/ -sourcepath src/ src/com/sd/turtle/TurtleDemoMain.java
src\com\sd\turtle\TurtleDemoMain.java:7: error: package ch.aplu.turtle does not                                                                   exist
import ch.aplu.turtle.*;
^
src\com\sd\turtle\TurtleDemoMain.java:10: error: cannot find symbol
  Turtle t1 = new Turtle();
  ^
  symbol:   class Turtle
  location: class TurtleDemoMain
src\com\sd\turtle\TurtleDemoMain.java:10: error: cannot find symbol
  Turtle t1 = new Turtle();
                  ^
  symbol:   class Turtle
  location: class TurtleDemoMain
3 errors


P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)
$ javac -d classes/ -cp lib/aplu5.jar -sourcepath src/ src/com/sd/turtle/TurtleDemoMain.java

P400@G416-13 MINGW32 ~/ked/code/j16/myrepo (master)

